# OpenEBTS

./: CMakeLists.txt  Config.h  IWTransactionXML.cpp  OpenEBTS.rc  OpenEBTS.sln  OpenEBTS.vcproj  RuleObj.h  StdAfx.h  build_All.sh  clean_All.bat  clean_All.sh  openebts.spec  version.txt
Android/: clean.bat  clean.sh
OpenEBTS/: .cproject  .project  CMakeLists.txt  Common.cpp  Common.h  Curl.cpp  FreeImageHelpers.cpp  FreeImageHelpers.h  IWNist.cpp  IWNistImp.cpp  IWTransaction.cpp  IWTransaction.h  IWVerification.cpp  IWVerification.h  Includes.h  NISTField.cpp  NISTField.h  NISTRecord.cpp  NISTRecord.h  OpenEBTS.h  OpenEBTS.rc  OpenEBTS.sln  OpenEBTS.vcproj  OpenEBTSErrors.h  OpenEBTSd.def  RuleObj.cpp  RuleObj.h  StdAfx.cpp  StdString.h  StringResources.h  StringSlots.h  TransactionDef.cpp  TransactionDef.h  UTF8.h  resource.h  transactiondef.h
OpenEBTS/Debug/: makefile  subdir.mk
OpenEBTS/Debug/Java/: subdir.mk
OpenEBTS/DebugA/: makefile  subdir.mk
OpenEBTS/DebugA/Java/: subdir.mk
OpenEBTS/Java/: OpenEBTSJNI.c  OpenEBTSJNI.h  OpenEBTSJNIHelpers.c  OpenEBTSJNIHelpers.h  clean.bat  clean.sh  jni_md.h
OpenEBTS/Java/OpenEBTS/: .project  run_javah.bat
OpenEBTS/Java/SampleCreateFile/: .classpath  .project
OpenEBTS/Java/SampleExportImages/: .classpath  .project
OpenEBTS/Java/SampleReadFile/: .classpath  .project
OpenEBTS/Java/SampleReadVerification/: .classpath  .project
OpenEBTS/Release/: makefile  sources.mk  subdir.mk
OpenEBTS/Release/Java/: subdir.mk
OpenEBTS/ReleaseA/: makefile  objects.mk  subdir.mk
OpenEBTS/ReleaseA/Java/: subdir.mk
(+474 files in other folders)
